--- a/encyclopedia/templates/encyclopedia/edit.html
+++ b/encyclopedia/templates/encyclopedia/edit.html
@@ -5,15 +5,16 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Create New Page</h1>
+    <h1>Edit {{ title }}</h1>
 
-    <form action="{% url 'encyclopedia:new_page' %}" method="POST">
+    <form action="{% url 'encyclopedia:new_page' %}" method="GET">
         {% csrf_token %}
         <div>
-            <input type="text" name="title" placeholder="Title">
+            <input type="text" name="title" placeholder="Title" value="{{ title }}">
         </div>
         <br />
-        <textarea id="new-page" name="new-page">
+        <textarea id="content" name="content" placeholder="Content">
+            {{ content }}
         </textarea>
         <input type="submit" name="save" value="Save New Page" class="btn btn-primary">
     </form>
