--- a/encyclopedia/templates/encyclopedia/edit.html
+++ b/encyclopedia/templates/encyclopedia/edit.html
@@ -7,7 +7,7 @@
 {% block body %}
     <h1>Edit {{ title }}</h1>
 
-    <form action="{% url 'encyclopedia:new_page' %}" method="GET">
+    <form action="{% url 'encyclopedia:edit' %}" method="POST">
         {% csrf_token %}
         <div>
             <input type="text" name="title" placeholder="Title" value="{{ title }}">
