--- a/encyclopedia/templates/encyclopedia/edit.html
+++ b/encyclopedia/templates/encyclopedia/edit.html
@@ -5,12 +5,12 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Edit {{ title }}</h1>
+    <h1>{{ title }}</h1>
 
     <form action="{% url 'encyclopedia:edit' %}" method="POST">
         {% csrf_token %}
         <div>
-            <input type="text" name="title" placeholder="Title" value="{{ title }}">
+            <input type="text" name="entry_title" placeholder="Title" value="{{ title }}">
         </div>
         <br />
         <textarea id="content" name="content" placeholder="Content">
