--- a/encyclopedia/templates/encyclopedia/edit.html
+++ b/encyclopedia/templates/encyclopedia/edit.html
@@ -1,11 +1,11 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-    New Page
+    Edit {{ title }}
 {% endblock %}
 
 {% block body %}
-    <h1>{{ title }}</h1>
+    <h1>Edit Entry: {{ title }}</h1>
 
     <form action="{% url 'encyclopedia:edit' %}" method="POST">
         {% csrf_token %}
@@ -13,9 +13,7 @@
             <input type="text" name="entry_title" placeholder="Title" value="{{ title }}">
         </div>
         <br />
-        <textarea id="content" name="content" placeholder="Content">
-            {{ content }}
-        </textarea>
+        <textarea id="content" name="content" placeholder="Content">{{ content }}</textarea>
         <input type="submit" name="save" value="Save New Page" class="btn btn-primary">
     </form>
 
