--- a/encyclopedia/templates/encyclopedia/new.html
+++ b/encyclopedia/templates/encyclopedia/new.html
@@ -10,11 +10,10 @@
     <form action="{% url 'encyclopedia:new_page' %}" method="POST">
         {% csrf_token %}
         <div>
-            <input type="text" name="title" placeholder="Title">
+            <input type="text" name="title" placeholder="Title" required>
         </div>
         <br />
-        <textarea id="new-page" name="new-page">
-        </textarea>
+        <textarea id="new-page" name="new-page" required></textarea>
         <input type="submit" name="save" value="Save New Page" class="btn btn-primary">
     </form>
 
