--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -12,11 +12,13 @@
         <div class="row">
             <div class="sidebar col-lg-2 col-md-3">
                 <h2>Wiki</h2>
-                <form action="{% url 'encyclopedia:search' %}" method="POST">
-                    {% csrf_token %}
-                    <input class="search" type="text" name="q" placeholder="Search Encyclopedia">
-                    <input type="submit" name="search" class="btn btn-primary">
-                </form>
+                <div class="d-inline-flex">
+                    <form class="d-inline-flex" action="{% url 'encyclopedia:search' %}" method="POST">
+                        {% csrf_token %}
+                        <input class="search" type="text" name="q" placeholder="">
+                        <button type="submit" name="search" class="btn btn-primary ml-2">Search</button>
+                    </form>
+                </div>
                 <div>
                     <a href="{% url 'encyclopedia:index' %}">Home</a>
                 </div>
